2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Project.cs: Unsubscribe the file changed event
	when disposing.

2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: When
	saving  configuration, make sure that old compilation parameters are
	deleted. Fixes bug #461105 - Reverting C# language version to Default
	does not work.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/InstantiatedType.cs: Fixed help urls for
	generic types.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Worked on on the fly
	type resolving.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs: Net ambience now
	outputs property parameters.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: fixed 'Bug 459682 -
	Static methods/properties don't show up in subclasses'.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed 'Bug 457237 - code
	completion doesn't show static methods when setting global variable'.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: fixed "Bug
	456579 - implement interface on inner class adds methods to outer
	class".

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomCecilMethod.cs: fixed 'Bug 444112 -
	Generic parameters missing in code completion (reopened)'

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Fixed unit test for bug
	444110.

2009-01-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: fixed 'Bug